[gd_scene load_steps=5 format=2]

[ext_resource path="res://weapons/abstract/WeaponPistol.gd" type="Script" id=1]
[ext_resource path="res://weapons/interfaces/WeaponHandler.gd" type="Script" id=2]
[ext_resource path="res://weapons/WeaponShotgun.gd" type="Script" id=3]
[ext_resource path="res://weapons/WeaponSMG.gd" type="Script" id=4]

[node name="WeaponHandler" type="Spatial"]
script = ExtResource( 2 )

[node name="WeaponPistol" type="Spatial" parent="."]
script = ExtResource( 1 )

[node name="WeaponShotgun" type="Spatial" parent="."]
script = ExtResource( 3 )

[node name="WeaponSMG" type="Spatial" parent="."]
script = ExtResource( 4 )

[node name="WeaponSniper" type="Spatial" parent="."]

[node name="WeaponRifle" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.906308, 0.422618, 0, -0.422618, 0.906308, 0, 2, 4 )
